[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labrynth"
version = "0.1.0"
description = "Agentic Pipeline Framework - Build and visualize agentic pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Labrynth Team"}
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "sqlmodel>=0.0.14",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
]

[project.scripts]
labrynth = "labrynth.cli:app"

[tool.hatch.build]
artifacts = ["src/labrynth/server/ui"]

[tool.hatch.build.targets.wheel]
packages = ["src/labrynth"]
